# LidarWS1718

./: .gitignore  Makefile  README.md
calculation/: Makefile
calculation/includes/: calculation.h
installScript/: installRaumScanner.sh
lidar/: Makefile
master/: Makefile
project_SS2016/: MerlinHalfSqhere.cpp
project_WS1718/: CMakeLists.txt  Calculation.cpp  Calculation.h  Gyro.cpp  Gyro.h  Lidar.cpp  Lidar.h  Merlin.cpp  Merlin.h  TestCalculation.cpp  Utils.cpp  Utils.h  calibrateGyro.cpp  main.cpp
project_WS1718/Gyro_Lib/: main.cpp
project_WS1718/libs/gyro/: BNO055.cpp  BNO055.h  gyro.cpp
project_WS1718/libs/lidar/: lidarController.cpp  lidarController.h  lidarLite.c  lidarLite.h  lidarTest.cpp
project_WS1718/libs/merlin/: MerlinHalfSqhere.h
project_WS1718/scans/: 3dPoints0.ply  3dPoints1.ply  3dPoints2.ply  3dPoints3.ply  3dPoints4.ply  3dPoints5.ply  3dPoints_07.03. 04:35:40_1.ply  3dPoints_07.03. 04:35:40_11.ply  3dPoints_07.03. 04:35:40_12.ply  3dPoints_07.03. 04:35:40_4.ply  3dPoints_07.03. 04:35:40_5.ply  3dPoints_07.03. 04:35:40_7.ply  3dPoints_07.03. 04:35:40_8.ply  3dPoints_07.03. 04_23_25_0.ply  3dPoints_07.03. 04_23_25_1.ply  3dPoints_07.03. 04_23_25_2.ply  3dPoints_07.03. 04_23_25_3.ply  3dPoints_07.03. 04_23_25_4.ply  3dPoints_07.03. 04_23_25_5.ply  3dPoints_07.03. 04_35_40_0.ply  3dPoints_07.03. 04_35_40_10.ply  3dPoints_07.03. 04_35_40_13.ply  3dPoints_07.03. 04_35_40_14.ply  3dPoints_07.03. 04_35_40_15.ply  3dPoints_07.03. 04_35_40_2.ply  3dPoints_07.03. 04_35_40_3.ply  3dPoints_07.03. 04_35_40_6.ply  3dPoints_07.03. 04_35_40_9.ply  3dPoints_07.03.2018._05.08.52_0.ply  3dPoints_07.03.2018._05.08.52_1.ply  3dPoints_07.03.2018._05.08.52_10.ply  3dPoints_07.03.2018._05.08.52_11.ply  3dPoints_07.03.2018._05.08.52_12.ply  3dPoints_07.03.2018._05.08.52_13.ply  3dPoints_07.03.2018._05.08.52_14.ply  3dPoints_07.03.2018._05.08.52_15.ply  3dPoints_07.03.2018._05.08.52_16.ply  3dPoints_07.03.2018._05.08.52_17.ply  3dPoints_07.03.2018._05.08.52_18.ply  3dPoints_07.03.2018._05.08.52_19.ply  (+28 more)
servoController/: Makefile  README
view/: .gitignore  Makefile
(+42 files in other folders)
